# totp

./: CMakeLists.txt  LICENSE  README.md  main.c  totp.c
include/: totp.h
include/hmac/: hmac.h
